<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrudTransactionActivity"
    android:fitsSystemWindows="true"
    >

    <Button
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:icon="@drawable/arrow_back"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:fontFamily="@font/lato"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/lato"
        android:text="@string/type_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toEndOf="@+id/tvType"
        app:layout_constraintEnd_toEndOf="parent"
        android:spinnerMode="dropdown"
        />

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/lato"
        android:text="@string/tvDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvType" />

    <Spinner
        android:id="@+id/spinnerDetails"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toEndOf="@+id/tvDetails"
        app:layout_constraintTop_toBottomOf="@+id/spinnerType"

        />

    <TextView
        android:id="@+id/tvValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/lato"
        android:text="@string/value_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetails" />

    <EditText
        android:id="@+id/etValue"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="25dp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/tvValue"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDetails"
        />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lato"
        android:text="@string/date_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvValue" />


    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/tvDate"
        app:layout_constraintTop_toBottomOf="@+id/etValue" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        android:text="@string/save"


        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/cancel"
        android:backgroundTint="@color/red"
        app:layout_constraintStart_toEndOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />




</androidx.constraintlayout.widget.ConstraintLayout>